<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/shore">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/t1c2question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/t1c2question2"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioGroup1c2q2">

            <RadioButton
                android:text="@string/t1c2q2answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t1c2q2answer1"
                android:textSize="16sp"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/t1c2q2answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer1c2q2"
                android:textSize="16sp"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/t1c2q2answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t1c2q2answer3"
                android:textSize="16sp"
                android:layout_weight="1"
                android:checked="false" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="200dp"
        android:onClick="onClickButton2" />

</RelativeLayout>